[project]
name = "cibmtr-equity-in-post-hct-survival-predictions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "lightgbm>=4.5.0",
    "optuna>=4.1.0",
    "xgboost>=2.1.3",
    "catboost>=1.2.7",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
]
